--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <svg class="eraser" id="eraser">
             <use xlink:href="#icon-eraser"></use>
         </svg>
+        <svg class="clear" id="clear">
+            <use xlink:href="#icon-delete"></use>
+        </svg>
+        <svg class="download" id="download">
+            <use xlink:href="#icon-download"></use>
+        </svg>
     </div>
 
     <ul class="brush-color-list">
@@ -28,7 +34,12 @@
        <li class="green" id="green"></li>
     </ul>
 
+    <ol class="brush-size">
+        <li class="thin active" id="thin"></li>
+        <li class="thick" id="thick"></li>
+    </ol>
+
     <script src="main.js"></script>
-    <script src="//at.alicdn.com/t/font_836167_hzg4jdptwpl.js"></script>
+    <script src="//at.alicdn.com/t/font_836167_5v6mi5r5yty.js"></script>
 </body>
 </html>
