--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <li class="thick" id="thick"></li>
     </ol>
 
-    <script src="main.js"></script>
-    <script src="//at.alicdn.com/t/font_836167_5v6mi5r5yty.js"></script>
+    <script type="text/javascript" src="./main.js"></script>
+
+    <script src="//at.alicdn.com/t/font_836167_5v6mi5r5yty.js">
+    </script>
 </body>
 </html>
